# barbican

./: .gitignore  README.md  REUSE.toml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy.yml  doc.yml  main.yml  publish-to-jfrog.yml  release-to-jfrog.yml
LICENSES/: LicenseRef-LEDGER.md
doc/: conf.py  gettingstarted.rst  howto.rst  index.rst  python_api.rst
doc/commands/: barbican.rst  internals.rst
doc/commands/internals/: capture_out.rst  cargo_config.rst  cargo_install.rst  gen_ldscript.rst  gen_memory_layout.rst  gen_task_metadata_bin.rst  install.rst  kernel_fixup.rst  meson_package_dyndep.rst  objcopy.rst  relink_elf.rst  srec_cat.rst
pyledger/outpost/: __init__.py  __version__.py  config.py  console.py  outpost.py
pyledger/outpost/_internals/: __init__.py  capture_out.py  gen_ldscript.py  gen_memory_layout.py  gen_task_metadata_bin.py  kernel_fixup.py  meson_package_dyndep.py  objcopy.py  relink_elf.py  srec_cat.py
pyledger/outpost/buildsys/: external_program.py  ninja_backend.py
pyledger/outpost/package/: __init__.py  package.py
pyledger/outpost/relocation/: __init__.py  elfutils.py  relocate.py  task_meta.py
pyledger/outpost/scm/: __init__.py  git.py  scm.py
pyledger/outpost/utils/: __init__.py  environment.py  memory_layout.py  pathhelper.py
pyledger/template/: __init__.py  subpkg.py
src/barbican/: __version__.py  barbican.py  config.py  console.py
src/barbican/_internals/: capture_out.py  gen_ldscript.py  gen_memory_layout.py  kernel_fixup.py  meson_package_dyndep.py  objcopy.py  relink_elf.py  srec_cat.py
src/barbican/buildsys/: ninja_backend.py
src/barbican/package/: package.py
src/barbican/relocation/: elfutils.py
src/barbican/scm/: git.py
src/barbican/utils/: environment.py  memory_layout.py  pathhelper.py
src/outpost/barbican/: barbican.py  config.py
src/outpost/barbican/_internals/: cargo_config.py  cargo_install.py  gen_task_metadata_bin.py  install.py
src/outpost/barbican/buildsys/: ninja_backend.py
src/outpost/barbican/package/: __init__.py  cargo.py  kernel.py  meson.py  package.py  runtime.py
src/outpost/barbican/relocation/: elfutils.py
src/outpost/barbican/scm/: __init__.py  git.py  scm.py
src/outpost/barbican/utils/: __init__.py  environment.py  memory_layout.py
tests/: test_git.py  test_memory_layout.py  test_pow2_utils.py  test_task_meta.py  test_template.py
