[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=0.4.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "pyledger-outpost"
packages = [{ include = "pyledger" }]
description = "Outpost package"
readme = "README.md"
license = "Apache-2.0"
authors = [
  "Ledger SA <firmware@ledger.fr>",
]
# placeholder for dynamic versioning
version = "0.0.0"

# when deploying an executable, define the executable name
# and the function it will execute
# see https://python-poetry.org/docs/pyproject/#scripts
[tool.poetry.scripts]
outpost = 'pyledger.outpost.outpost:main'

[[tool.poetry.source]]
name = "ledger"
url = "https://nexus.orange.ledgerlabs.net/repository/kulos-pypi/simple/"
priority = "supplemental"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
# if on a tagged commit, using the tag as version, otherwise, indicate
# the distance and the commit ref
format-jinja = "{% if distance == 0 %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"
style = "semver"
[tool.poetry-dynamic-versioning.substitution]
files = ["pyledger/outpost/__version__.py"]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
tomli = { version = "^2.0.1", python = "<3.11" }
ninja_syntax = ">1.7"
lief = ">0.13"
cstruct = ">=5.2,<6.0"
pyledger-logger = ">=0.0.1"

[tool.poetry.group.dev.dependencies]
coverage = ">=0.4"
flake8 = ">=7.0,<8.0"
flake8-html = ">=0.4.3"
mypy = ">=1.8.0"
pytest = ">=4.6"
tox = ">=4.12"
black = ">=24.2,<25.0"
cachetools = ">=5.3"
lxml = ">=4.8.0"

[metadata]
homepage = "https://git.orange.ledgerlabs.net/outpost/python-outpost"
dependencies = [

]

[sdist]
formats = "gztar"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
python_version = "3.10"

# support for namespace packages
namespace_packages = true

# comma separated list of packages
packages = "pyledger.outpost"

# Untyped definitions and calls
disallow_incomplete_defs = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true

# Miscellaneous strictness flags
strict_equality = false
