# SPDX-FileCopyrightText: 2023 Ledger SAS
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyledger-outpost"
description = "Outpost-OS build system"
dynamic = ["version"]
requires-python = ">= 3.10"
readme = "README.md"
authors = [
  {email = "Ledger SA <firmware@ledger.fr>"},
]
license = {file = "LICENSE"}
dependencies = [
    "cstruct>=5.2,<6.0",
    "Jinja2>=3.1.0",
    "jinja-cli>=1.2.0",
    "jsonschema>=4.18.0",
    "kconfiglib>=14.1.0",
    "lief>0.13",
    "meson>=1.3.0",
    "ninja>=1.11.0",
    "ninja_syntax>1.7",
    "pyledger-logger>=0.0.1",
    "pyledger-svd2json>=0.1.4",
    "pyledger-devicetree-parser>=0.1.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "referencing>=0.33.0",
    "GitPython>=3.1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Developers",

    "Topic :: Software Development :: Build Tools",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://git.orange.ledgerlabs.net/outpost"
Documentation = "https://pages.git.orange.ledgerlabs.net/outpost/outpostpedia/"
Repository = "https://git.orange.ledgerlabs.net/outpost/python-outpost.git"
Issues = "https://git.orange.ledgerlabs.net/outpost/python-outpost/issues"

[project.scripts]
outpost = "pyledger.outpost.outpost:main"

[project.optional-dependencies]
devel = [
    "coverage>=0.4",
    "flake8>=7.0,<8.0",
    "flake8-html>=0.4.3",
    "mypy>=1.8.0",
    "pytest>=4.6",
    "black>=24.2,<25.0",
    "cachetools>=5.3",
    "lxml>=4.8.0",
    "types-jsonschema>=4.18.0",
]
doc = [
    "Sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-simplepdf>=1.6.0",
    # "sphinx-autoapi",
]
license = [
    "reuse>=3.0.0",
]

[tool.setuptools]
# TODO: move to src standard layout
packages = ["pyledger"]

[tool.setuptools_scm]
# version_file = "pyledger/outpost/__version__.py"
